syntax = "proto3";
package User;

option go_package = "/.;userpublicapi";

import "google/protobuf/empty.proto";

service UserPublicAPI {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc FindUser(FindUserRequest) returns (FindUserResponse);
  rpc BlockUser(BlockUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string login = 1;
  optional string email = 2;
  optional string telegram = 3;
}

message CreateUserResponse {
  string userID = 1;
}

message UpdateUserRequest {
  string userID = 1;
  optional string email = 2;
  optional string telegram = 3;
  UserStatus status = 4;
}

message FindUserRequest {
  string userID = 1;
}

message FindUserResponse {
  string userID = 1;
  string login = 2;
  UserStatus status = 3;
  optional string email = 4;
  optional string telegram = 5;
}

message BlockUserRequest {
  string userID = 1;
}

message DeleteUserRequest {
  string userID = 1;
}

enum UserStatus {
  Blocked = 0;
  Active = 1;
  Deleted = 2;
}